# data

./: .gitignore  README.md  collection.schema.json  data.json  data.mod.json  data.schema.json  mod.json  mod_schema.json  schema.json  validate.sh
character/: Race.ods  RaceStat.ods
data/: character.mod.json  collection.schema.json  data.json  data.schema.json  foo.const.json  schema.json  target.schema.json
data/character/: Race.schema.json  RaceStat.schema.json  race.enum.json  race.table.json  race_stat.ods  race_stat.table.json
data/skills/: ice_bolt.json  skills.json
lib/rs/: Cargo.toml  build.rs
lib/rs/generator/: Cargo.toml
lib/rs/generator/src/: collect.rs  error.rs  generate.rs  generator.rs  lib.rs  name.rs
lib/rs/generator/src/generate/: constant.rs  enumeration.rs  module.rs  table.rs
lib/rs/generator/src/generator/: constant.rs  enumeration.rs  module.rs  table.rs
lib/rs/src/: character.rs  data.rs  error.rs  generator.rs  lib.rs  load.rs  parse.rs  schema.rs
lib/rs/src/character/: race.rs  race_stat.rs
lib/rs/src/data/: character.rs  item.rs  link_test.rs
lib/rs/src/data/character/: path_node.rs  race.rs  race_stat.rs
lib/rs/src/data/item/: equipment.rs  equipment_kind.rs  item.rs  random_box.rs  weapon.rs
lib/rs/src/generator/: table.rs
lib/rs/src/model/: character.rs
schema/: const.json  enum.json  link_test.table.json  mod.json  sample.const.json  table.json
skills/: fire_ball.json  skill.schema.json  skills.json
src/: item.mod.json  link_test.ods
syntax/: enum.json  scalar.json  table.json  union.json
(+36 files in other folders)
