[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../../../protocol/lib/rs" }

calamine = "0.30"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
generator = { path = "generator" }
